@@ -6,6 +6,7 @@ Cacti CHANGELOG
 -issue#5848: RRDfile Auto Clean not working
 -issue#5856: Help HTML file is incorrect for Automation Networks
 -issue#5867: Disabling a Tree does not function as expected
+-issue#5870: CLI utility splice_rrd.php generates an error in PHP8+
 
 1.2.28
 -security#GHSA-49f2-hwx9-qffr: XSS vulnerability when creating external links with the consolenewsection parameter
